infra/hms/trino/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trino
  namespace: hms
spec:
  selector:
    app: trino
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
