infra/hms/trino/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gw-to-trino
  namespace: hms
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: istio-ingress
  to:
    - group: ""
      kind: Service
      name: trino
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: trino-route
  namespace: hms
spec:
  parentRefs:
    - name: external-gw
      namespace: istio-ingress
  hostnames:
    - "trino.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: trino
          namespace: hms
          port: 8080
